# Ray-Tracing

./: CMakeLists.txt
src/: color.cpp  main.cpp  ray.cpp
src/header/: color.hpp  common.hpp  hittable.hpp  ray.hpp  sphere.hpp
